fix: fix footer alignment

--- a/components/landing.module.css
+++ b/components/landing.module.css
@@ -7,6 +7,7 @@
   background-image: url("../src/svgs/mobile/footer_left_bottom.svg");
   background-repeat: no-repeat;
   background-size: cover;
+  padding-left: 150px;
 }
 
 .mainTitle {
